--- a/_config.yml
+++ b/_config.yml
@@ -2,46 +2,44 @@ nav:
   Home: /
   About: /about/
   Writing: /archives/
-  Projects: http://github.com/probberechts
+  Projects: http://github.com/garbados
 
-projects_url: http://github.com/probberechts
+projects_url: http://github.com/garbados
 
 customize:
     gravatar:
-        email: 
+        email: garbados@gmail.com
     logo:
         enabled: true
         width: 50
         height: 50
         url: /images/logo.png
         gravatar: false
-    favicon: 
+    favicon:
       # eg. generate with http://realfavicongenerator.net/
       desktop:
         url: /images/favicon.ico
         gravatar: false
       android:
-        url: /images/favicon-192x192.png
+        url: /images/favicon-196x196.png
         gravator: false
       apple:
-        url: /images/apple-touch-icon.png
+        url: /images/apple-touch-icon-152x152.png
         gravator: false
     social_links:
-        github: http://github.com/probberechts/cactus-dark
-        twitter: /
-        facebook: /
-        linkedin: /
+        github: http://github.com/garbados/cactus-dark
+        comments-o: https://toot.cat/@garbados
     show_all_posts: false
     post_count: 5
     highlight: rainbow
 
 # RSS
-rss: false
+rss:
 
 # Plugins
 plugins:
     disqus_shortname: # Disqus Comments Shortname
-    google_analytics: UA-86660611-1 # enter the tracking ID for your Google Analytics
+    google_analytics: # enter the tracking ID for your Google Analytics
 
 # Miscellaneous
 miscellaneous:
